# game_engine

./: CMakeLists.txt
assets/: manifest.txt
src/: editor_main.cpp  main.cpp
src/Assets/: AssetManager.cpp  AssetManager.h  AssetManifest.cpp  AssetManifest.h  Font.h  Texture.h
src/Engine/: Camera2D.h  Engine.cpp  Engine.h
src/Game/: IGame.h  SandboxScenes.cpp  SandboxScenes.h
src/Input/: Input.cpp  Input.h
src/Renderer/: CommandBuffer.cpp  CommandBuffer.h  RenderBatch.h  RenderCommand.h  RenderQueue.cpp  RenderQueue.h  RenderStats.h  Renderer.h  SDLRenderer.cpp  SDLRenderer.h
src/Systems/: PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TilemapSystem.cpp  TilemapSystem.h
src/Time/: Time.cpp  Time.h
src/World/: Components.h  Entity.h  IScene.h  Scene.cpp  Scene.h  SceneManager.h  Tilemap.h
